--- a/product.html
+++ b/product.html
@@ -35,6 +35,9 @@
         <button id="order-btn" class="preorder-btn">Order Now</button>
       </div>
     </div>
+
+    <h2>You May Also Like</h2>
+    <div id="related-products" class="product-list"></div>
   </main>
 
   <div id="checkout-modal" class="modal">
