--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
 
-  <main class Federation="container">
+  <main class="container">
     <!-- Login Panel -->
     <div id="login-panel" class="card">
       <h2>Admin Login</h2>
@@ -34,7 +34,7 @@
     <div id="admin-panel" class="card" style="display: none;">
       <div class="panel-header">
         <h2>Admin Panel</h2>
-        <button onclick="logoutAdmin()" class="secondary">Logout</button>
+        <button id="logout-btn" class="secondary">Logout</button>
       </div>
 
       <h2>Add Product</h2>
