--- a/category.html
+++ b/category.html
@@ -3,86 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Category - The Geek Shop</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" type="module"></script>
+  <title>Category</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="site-header">
-    <nav>
-      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
-      </div>
+  <header class="header">
+    <div class="logo">Keyboard Shop</div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="cart.html">Cart</a>
+      <a href="login.html">Login/Register</a>
+      <a id="adminLink" href="admin.html" style="display:none;">Admin</a>
     </nav>
   </header>
-
-  <main class="container">
-    <h1 id="category-title">Category</h1>
-    <div id="category-products" class="product-list"></div>
-  </main>
-
-  <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">×</button>
-    <img id="viewer-img" src="" alt="">
-  </div>
-
-  <div id="checkout-modal" class="modal">
-    <div class="card modal-content">
-      <div class="modal-header">
-        <h2>Checkout</h2>
-        <button id="close-modal-btn">Close</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <input type="hidden" id="co-product-id">
-        <div class="row">
-          <div><label>Product Name</label><input id="co-product-name" readonly></div>
-          <div><label>Color</label><input id="co-color" readonly></div>
-        </div>
-        <div class="row">
-          <div><label>Price (tk)</label><input id="co-price" readonly><input type="hidden" id="co-unit-price-raw"><input type="hidden" id="co-available-stock"></div>
-          <div><label>Quantity</label><input id="co-qty" type="number" min="1" value="1"></div>
-        </div>
-        <div class="row">
-          <div><label>Delivery</label><input id="co-delivery" readonly></div>
-          <div><div><label>Total (tk)</label><input id="co-total" readonly></div>
-        </div>
-        <div class="row">
-          <div><label>Name</label><input id="co-name" required></div>
-  <div><label>Phone</label><input id="co-phone" type="tel" required></div>
-        </div>
-        <div><label>Address</label><textarea id="co-address" required></textarea></div>
-        <div class="row">
-          <div><label>Payment Method</label>
-            <select id="co-payment" required>
-              <option value="">Select</option>
-              <option value="Cash on Delivery">Cash on Delivery</option>
-              <option value="Bkash">Bkash</option>
-            </select>
-          </div>
-          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
-        </div>
-        <div class="row">
-          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
-          <div><label>Due Amount (tk)</label><input id="co-due-amount" readonly></div>
-        </div>
-        <div><label>Transaction ID</label><input id="co-txn"></div>
-        <div><label><input type="checkbox" id="co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
-        <div><p id="co-note" class="muted"></p></div>
-        <button id="place-order-btn" type="submit">Place Order</button>
-      </form>
-    </div>
-  </div>
-
-  <footer>
-    <div class="footer-social">
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-      <a href="https://www.instagram.com/thegeekshop.0" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://wa.me/01960788862" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+  <section id="categoryProducts" style="display: flex; flex-wrap: wrap; justify-content: space-around;"></section>
+  <footer>© 2025 Keyboard Shop</footer>
+  <script type="module" src="js/firebase.js"></script>
+  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="js/products.js"></script>
+  <script type="module" src="js/cart.js"></script>
+  <script type="module">
+    import { loadCategoryProducts } from './js/products.js';
+    loadCategoryProducts();
+  </script>
 </body>
 </html>
