--- a/product.html
+++ b/product.html
@@ -1,43 +1,59 @@
+<DOCUMENT filename="product.html">
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Product - The Geek Shop</title>
+  <title>Product</title>
+  <link rel="icon" type="image/x-icon" href="logo t.png"> 
+  <link rel="canonical" id="canonical-link" href="">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" type="module"></script>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
+  </script>
+  <script type="module" src="script.js"></script>
+
 </head>
 <body>
   <header class="site-header">
-    <nav>
-      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
+     <nav>
+      <a href="index.html" class="logo">
+        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
+      </a>
       <div class="nav-links">
-        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
       </div>
     </nav>
   </header>
 
-  <main class="container">
-    <div id="product-detail" class="product-detail card">
+ <main class="container">
+    <div id="product-section" class="product-detail">
       <div class="product-images">
-        <img id="featured-img" src="" alt="Featured Image" class="main-image">
-        <div id="thumbnails" class="thumbnails"></div>
+        <img id="main-image" src="" alt="">
+        <div id="thumbnail-gallery" class="thumbnail-gallery"></div>
       </div>
       <div class="product-info">
         <h1 id="product-name"></h1>
-        <div class="badges" id="product-badges"></div>
-        <p class="price" id="product-price"></p>
-        <p id="product-desc" class="desc"></p>
-        <p class="muted" id="product-availability"></p>
-        <button id="order-btn" class="preorder-btn">Order Now</button>
+        <div id="product-color" class="muted"></div>
+        <div id="product-price" class="price"></div>
+        <div id="product-badges" class="badges"></div>
+        <p id="product-desc"></p>
+        <div id="order-row" class="order-row"></div>
       </div>
     </div>
 
-    <h2>You May Also Like</h2>
-    <div id="related-products" class="product-list"></div>
+    <h2>Other Products</h2>
+    <div id="other-products" class="product-list new-hot-list"></div>
   </main>
+
+  <div id="image-viewer" class="image-viewer">
+    <button id="close-viewer" class="close-viewer">&times;</button>
+    <img id="viewer-img" src="" alt="">
+  </div>
 
   <div id="checkout-modal" class="modal">
     <div class="card modal-content">
@@ -48,51 +64,106 @@
       <form id="checkout-form" class="form">
         <input type="hidden" id="co-product-id">
         <div class="row">
-          <div><label>Product Name</label><input id="co-product-name" readonly></div>
-          <div><label>Color</label><input id="co-color" readonly></div>
+          <div>
+            <label>Product Name</label>
+            <input id="co-product-name" readonly>
+          </div>
+          <div>
+            <label>Color</label>
+            <input id="co-color" readonly>
+          </div>
         </div>
         <div class="row">
-          <div><label>Price (tk)</label><input id="co-price" readonly><input type="hidden" id="co-unit-price-raw"><input type="hidden" id="co-available-stock"></div>
-          <div><label>Quantity</label><input id="co-qty" type="number" min="1" value="1"></div>
+          <div>
+            <label>Price (tk)</label>
+            <input id="co-price" readonly>
+            <input type="hidden" id="co-unit-price-raw">
+            <input type="hidden" id="co-available-stock">
+          </div>
+          <div>
+            <label>Quantity</label>
+            <input id="co-qty" type="number" min="1" value="1">
+          </div>
         </div>
         <div class="row">
-          <div><label>Delivery</label><input id="co-delivery" readonly></div>
-          <div><label>Total (tk)</label><input id="co-total" readonly></div>
+          <div>
+            <label>Delivery</label>
+            <input id="co-delivery" readonly>
+          </div>
+          <div>
+            <label>Total (tk)</label>
+            <input id="co-total" readonly>
+          </div>
         </div>
         <div class="row">
-          <div><label>Name</label><input id="co-name" required></div>
-          <div><label>Phone</label><input id="co-phone" type="tel" required></div>
+          <div>
+            <label>Name</label>
+            <input id="co-name" required>
+          </div>
+          <div>
+            <label>Phone</label>
+            <input id="co-phone" type="tel" required>
+          </div>
         </div>
-        <div><label>Address</label><textarea id="co-address" required></textarea></div>
+        <div>
+          <label>Address</label>
+          <textarea id="co-address" required></textarea>
+        </div>
         <div class="row">
-          <div><label>Payment Method</label>
+          <div>
+            <label>Payment Method</label>
             <select id="co-payment" required>
               <option value="">Select</option>
               <option value="Cash on Delivery">Cash on Delivery</option>
               <option value="Bkash">Bkash</option>
             </select>
           </div>
-          <div><label>Pay to</label><input id="co-payment-number" readonly></div>
+          <div>
+            <label>Pay to (Send money)</label>
+            <input id="co-payment-number" readonly>
+          </div>
         </div>
         <div class="row">
-          <div><label>Pay Now (tk)</label><input id="co-pay-now" readonly></div>
-          <div><label>Due Amount (tk)</label><input id="co-due-amount" readonly></div>
+          <div>
+            <label>Pay Now (tk)</label>
+            <input id="co-pay-now" readonly>
+          </div>
+          <div>
+            <label>Due Amount (tk)</label>
+            <input id="co-due-amount" readonly>
+          </div>
         </div>
-        <div><label>Transaction ID</label><input id="co-txn"></div>
-        <div><label><input type="checkbox" id="co-policy" required> I agree to the <a href="status.html">Order Policy</a></label></div>
-        <div><p id="co-note" class="muted"></p></div>
+        <div>
+          <label>Transaction ID</label>
+          <input id="co-txn">
+        </div>
+        <div>
+          <label>
+            <input type="checkbox" id="co-policy" required>
+            I agree to the <a href="status.html">Order Policy</a>
+          </label>
+        </div>
+        <div>
+          <p id="co-note" class="muted"></p>
+        </div>
         <button id="place-order-btn" type="submit">Place Order</button>
       </form>
     </div>
   </div>
-
-  <footer>
-    <div class="footer-social">
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-      <a href="https://www.instagram.com/thegeekshop.0" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-      <a href="https://wa.me/01960788862" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+ 
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
