--- a/admin.html
+++ b/admin.html
@@ -77,7 +77,7 @@
             <select id="add-category" required>
               <option value="Keycaps">Keycaps</option>
               <option value="Switches">Switches</option>
-              <option value="Keyboards and Barebones">Keyboards and Barebones</option>
+              <option value="Keyboard and Mouse">Keyboards and Mouse</option>
               <option value="Accessories and Collectables">Accessories and Collectables</option>
             </select>
           </div>
@@ -155,5 +155,6 @@
     </div>
   </main>
 </body>
+
 
 </html>
